Changed usages of 'Arrays.asList()' to 'List.of()'.